# librustzcash

./: .gitignore  Cargo.toml  README.md
components/zcash_protocol/: Cargo.toml
components/zcash_protocol/src/: consensus.rs
librustzcash/: Cargo.toml
librustzcash/zcash_client_backend/: Cargo.toml
rustdoc/latest/: help.html  index.html  settings.html
rustdoc/latest/equihash/: all.html  fn.is_valid_solution.html  index.html  struct.Error.html
rustdoc/latest/f4jumble/: all.html  constant.VALID_LENGTH.html  enum.Error.html  fn.f4jumble.html  fn.f4jumble_inv.html  fn.f4jumble_inv_mut.html  fn.f4jumble_mut.html  index.html
rustdoc/latest/pczt/: all.html  enum.ParseError.html  index.html  struct.Pczt.html
rustdoc/latest/pczt/common/: fn.determine_lock_time.html  index.html  struct.Global.html  trait.LockTimeInput.html
rustdoc/latest/pczt/orchard/: index.html  struct.Action.html  struct.Bundle.html  struct.Output.html  struct.Spend.html
rustdoc/latest/pczt/roles/: index.html
rustdoc/latest/pczt/sapling/: index.html  struct.Bundle.html  struct.Output.html  struct.Spend.html
rustdoc/latest/pczt/transparent/: index.html  struct.Bundle.html  struct.Input.html  struct.Output.html
rustdoc/latest/src/equihash/: lib.rs.html  minimal.rs.html  params.rs.html  verify.rs.html
rustdoc/latest/src/f4jumble/: lib.rs.html
rustdoc/latest/src/pczt/: common.rs.html  lib.rs.html  orchard.rs.html  roles.rs.html  sapling.rs.html  transparent.rs.html
rustdoc/latest/src/zcash/: lib.rs.html
rustdoc/latest/src/zcash_address/: convert.rs.html  encoding.rs.html  kind.rs.html  lib.rs.html  test_vectors.rs.html
rustdoc/latest/src/zcash_client_backend/: data_api.rs.html  decrypt.rs.html  fees.rs.html  lib.rs.html  proposal.rs.html  proto.rs.html  scan.rs.html  scanning.rs.html  serialization.rs.html  sync.rs.html  wallet.rs.html
rustdoc/latest/src/zcash_client_sqlite/: chain.rs.html  error.rs.html  lib.rs.html  util.rs.html  wallet.rs.html
rustdoc/latest/src/zcash_encoding/: lib.rs.html
rustdoc/latest/src/zcash_extensions/: lib.rs.html
rustdoc/latest/src/zcash_history/: entry.rs.html  lib.rs.html  node_data.rs.html  tree.rs.html  version.rs.html
rustdoc/latest/src/zcash_keys/: address.rs.html  encoding.rs.html  keys.rs.html  lib.rs.html
rustdoc/latest/src/zcash_primitives/: block.rs.html  encoding.rs.html  lib.rs.html  merkle_tree.rs.html
rustdoc/latest/src/zcash_proofs/: lib.rs.html  (+5 more)
rustdoc/latest/zcash/: all.html  index.html
rustdoc/latest/zcash_address/: all.html  enum.ConversionError.html  enum.ParseError.html  index.html  struct.UnsupportedAddress.html  struct.ZcashAddress.html  trait.Converter.html  trait.ToAddress.html  trait.TryFromAddress.html  trait.TryFromRawAddress.html  type.Network.html
rustdoc/latest/zcash_client_backend/: all.html  enum.TransferType.html  fn.decrypt_transaction.html  index.html  struct.DecryptedOutput.html  type.PoolType.html  type.ShieldedProtocol.html
rustdoc/latest/zcash_client_sqlite/: all.html  enum.FsBlockDbError.html  index.html  struct.AccountUuid.html  struct.BlockDb.html  struct.FsBlockDb.html  struct.GapLimits.html  struct.ReceivedNoteId.html  struct.SqlTransaction.html  struct.UtxoId.html  struct.WalletDb.html
rustdoc/latest/zcash_encoding/: all.html  constant.MAX_COMPACT_SIZE.html  index.html  struct.Array.html  struct.CompactSize.html  struct.Optional.html  struct.Vector.html
rustdoc/latest/zcash_extensions/: all.html  index.html
rustdoc/latest/zcash_history/: all.html  constant.MAX_ENTRY_SIZE.html  constant.MAX_NODE_DATA_SIZE.html  enum.EntryKind.html  enum.EntryLink.html  enum.Error.html  enum.V1.html  enum.V2.html  index.html  struct.Entry.html  struct.NodeData.html  struct.Tree.html  trait.Version.html
rustdoc/latest/zcash_keys/: all.html  index.html
rustdoc/latest/zcash_primitives/: all.html  index.html
rustdoc/latest/zcash_proofs/: all.html  constant.SAPLING_OUTPUT_NAME.html  constant.SAPLING_SPEND_NAME.html  constant.SPROUT_NAME.html  fn.default_params_folder.html  fn.download_parameters.html  fn.download_sapling_parameters.html  fn.download_sprout_parameters.html  fn.load_parameters.html  fn.parse_parameters.html  index.html  struct.SaplingParameterPaths.html  struct.ZcashParameters.html
rustdoc/latest/zcash_protocol/: all.html  enum.PoolType.html  enum.ShieldedProtocol.html  index.html  struct.TxId.html
rustdoc/latest/zcash_transparent/: all.html  index.html
rustdoc/latest/zip321/: all.html  enum.Zip321Error.html  fn.memo_from_base64.html  fn.memo_to_base64.html  index.html  struct.Payment.html  struct.TransactionRequest.html
zaino/integration-tests/: Cargo.toml
zaino/zaino-state/: Cargo.toml
zaino/zaino-testutils/: Cargo.toml
zcash_client_backend/src/: proposal.rs  scan.rs
zcash_client_backend/src/data_api/: testing.rs
zcash_client_memory/src/: wallet_read.rs
zcash_client_sqlite/src/: wallet.rs
zcash_client_sqlite/src/wallet/: init.rs
zcash_extensions/src/transparent/: demo.rs
zcash_primitives/: Cargo.toml
zcash_primitives/proptest-regressions/transaction/: tests.txt
zcash_primitives/src/transaction/: builder.rs  components.rs  fees.rs  mod.rs  sighash.rs  sighash_v5.rs  sighash_vcrosslink.rs  tests.rs  txid.rs
zebra-crosslink/zebra-crosslink/: Cargo.toml
zebra-crosslink/zebra-crosslink/src/: lib.rs
zebra-crosslink/zebra-rpc/: Cargo.toml
zebra-crosslink/zebrad/: Cargo.toml
zingo-infrastructure/zcash_local_net/: Cargo.toml
zingolib/darkside-tests/: Cargo.toml
zingolib/darkside-tests/src/: chain_generics.rs  utils.rs
zingolib/darkside-tests/tests/: advanced_reorg_tests.rs  tests.rs
zingolib/libtonode-tests/: Cargo.toml
zingolib/libtonode-tests/src/: chain_generics.rs
zingolib/libtonode-tests/tests/: concrete.rs  shield_transparent.rs  sync.rs  wallet.rs
zingolib/pepper-sync/src/: lib.rs  wallet.rs
zingolib/zingo-cli/: Cargo.toml
zingolib/zingo-cli/src/: lib.rs  regtest.rs
zingolib/zingolib/: Cargo.toml
zingolib/zingolib/src/: config.rs  testutils.rs
zingolib/zingolib_testutils/: Cargo.toml
zingolib/zingolib_testutils/src/: scenarios.rs
(+1064 files in other folders)
