[workspace]
resolver = "2"
members = [
    "librustzcash/components/equihash",
    "librustzcash/components/f4jumble",
    "librustzcash/components/zcash_address",
    "librustzcash/components/zcash_encoding",
    "librustzcash/components/zcash_protocol",
    "librustzcash/components/zip321",
    "librustzcash/pczt",
    "librustzcash/zcash",
    "librustzcash/zcash_client_backend",
    "librustzcash/zcash_client_sqlite",
    "librustzcash/zcash_extensions",
    "librustzcash/zcash_history",
    "librustzcash/zcash_keys",
    "librustzcash/zcash_primitives",
    "librustzcash/zcash_proofs",
    "librustzcash/zcash_transparent",

    "tenderlink",

    "visualizer_zcash",

    "zebra-crosslink/zebrad",
    "zebra-crosslink/zebra-chain",
    "zebra-crosslink/zebra-network",
    "zebra-crosslink/zebra-state",
    "zebra-crosslink/zebra-script",
    "zebra-crosslink/zebra-consensus",
    "zebra-crosslink/zebra-rpc",
    "zebra-crosslink/zebra-node-services",
    "zebra-crosslink/zebra-test",
    "zebra-crosslink/zebra-utils",
    "zebra-crosslink/zebra-crosslink",
    "zebra-crosslink/tower-batch-control",
    "zebra-crosslink/tower-fallback",

    "zingo-common/zingo_common_components",
    "zingo-common/zingo_netutils",
]

[workspace.package]
edition = "2021"
rust-version = "1.81"
license = "MIT, Apache-2.0"
repository = "https://github.com/ShieldedLabs/crosslink_monolith"
categories = ["cryptography::cryptocurrencies"]


[workspace.dependencies]
# librustzcash redirects
# ----------------------
# components
equihash = { version = "0.2", path = "./librustzcash/components/equihash" }
zcash_address = { version = "0.9", path = "./librustzcash/components/zcash_address", default-features = false }
zcash_encoding = { version = "0.3", path = "./librustzcash/components/zcash_encoding", default-features = false }
zcash_protocol = { version = "0.6.1", path = "./librustzcash/components/zcash_protocol", default-features = false }
zip321 = { version = "0.5", path = "./librustzcash/components/zip321" }
# top-level
pczt = { version = "0.3", path = "./librustzcash/pczt" }
transparent = { package = "zcash_transparent", version = "0.4", path = "./librustzcash/zcash_transparent", default-features = false }
zcash_client_backend = { version = "0.19", path = "./librustzcash/zcash_client_backend" }
zcash_history = { path = "./librustzcash/zcash_history" }
zcash_keys = { version = "0.10", path = "./librustzcash/zcash_keys" }
zcash_primitives = { version = "0.24", path = "./librustzcash/zcash_primitives", default-features = false }
zcash_proofs = { version = "0.24", path = "./librustzcash/zcash_proofs", default-features = false }
zcash_transparent = { path = "./librustzcash/zcash_transparent" }

# tenderlink redirects
# --------------------
tenderlink = { path = "./tenderlink" }

# visualizer_zcash redirects
# --------------------------
visualizer_zcash = { path = "./visualizer_zcash" }

# zebra redirects
# ---------------
zebrad = { path = "./zebra-crosslink/zebrad" }
zebra-chain = { path = "zebra-crosslink/zebra-chain" }
zebra-network = { path = "zebra-crosslink/zebra-network" }
zebra-state = { path = "zebra-crosslink/zebra-state" }
zebra-script = { path = "zebra-crosslink/zebra-script" }
zebra-consensue = { path = "zebra-crosslink/zebra-consensus" }
zebra-rpc = { path = "zebra-crosslink/zebra-rpc" }
zebra-node-services = { path = "zebra-crosslink/zebra-node-services" }
zebra-test = { path = "zebra-crosslink/zebra-test" }
zebra-utils = { path = "zebra-crosslink/zebra-utils" }
zebra-crosslink = { path = "zebra-crosslink/zebra-crosslink" }
tower-batch-control = { path = "zebra-crosslink/tower-batch-control" }
tower-fallback = { path = "zebra-crosslink/tower-fallback" }

# zingo-common redirects
# ----------------------
zingo_common_components = { path = "zingo-common/zingo_common_components" }
zingo_netutils = { path = "zingo-common/zingo_netutils" }

# common
# ---------------------
incrementalmerkletree = { version = "0.8.2", features = ["legacy-api"] }
orchard = "0.11"
base64 = "0.22.1"
bech32 = { version = "0.11.0", features = ["alloc"] }
bellman = { version = "0.14", features = ["groth16"] }
bitflags = "2.9.0"
bitvec = { version = "1.0.1", features = ["alloc"] }
blake2b_simd = "1.0.3"
blake2s_simd = "1.0.3"
bls12_381 = "0.8.0"
bs58 = { version = "0.5.1", features = ["alloc", "check"] }
byteorder = "1.5.0"
criterion = "0.5.1"
crossbeam-channel = "0.5.14"
group = "0.13.0"
hex = { version = "0.4.3", features = ["alloc"] }
http-body-util = "0.1.3"
hyper = "1.6.0"
hyper-util = { version = "0.1.11", features = ["tokio"] }
jubjub = "0.10.0"
lazy_static = "1.4.0"
proptest = "1.6.0"
prost = "0.14.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rayon = "1.11.0"
redjubjub = "0.8.0"
regex = "1.11.0"
ripemd = "0.1.3"
secp256k1 = { version = "0.29.1", default-features = false, features = ["alloc"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
static_assertions = "1.1.0"
tokio = "1.44.2"
tower = "0.4.13"
tracing = "0.1.41"
zcash_note_encryption = "0.4.1"

# librustzcash-specific
# ---------------------
aes = "0.8"
ambassador = "0.4"
arti-client = { version = "0.28", default-features = false, features = ["compression", "rustls", "tokio"] }
assert_matches = "1.5"
bip0039 = { version = "0.12" }
bip32 = { version = "=0.6.0-pre.1", default-features = false }
block-buffer = { version = "=0.11.0-rc.3" } # later RCs require edition2024
core2 = { version = "0.3", default-features = false, features = ["alloc"] }
crypto-common = { version = "=0.2.0-rc.1" } # later RCs require edition2024
document-features = "0.2"
dynosaur = "0.2"
ff = { version = "0.13", default-features = false }
fpe = { version = "0.6", default-features = false, features = ["alloc"] }
fs-mistrust = "0.9"
getset = "0.1"
incrementalmerkletree-testing = "0.3"
maybe-rayon = { version = "0.1.0", default-features = false }
memuse = { version = "0.2.2", default-features = false }
nonempty = { version = "0.11", default-features = false }
pasta_curves = "0.5"
percent-encoding = "2.1.0"
postcard = { version = "1", features = ["alloc"] }
rand_distr = { version = "0.4", default-features = false }
rand_xorshift = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
rust_decimal = { version = "1.35", default-features = false, features = ["serde"] }
sapling = { package = "sapling-crypto", version = "0.5", default-features = false }
schemerz = "0.2"
schemerz-rusqlite = "0.320"
secrecy = "0.8"
shardtree = "0.6.1"
subtle = { version = "2.2.3", default-features = false }
time = "0.3.22"
time-core = "=0.1.2"
tokio-rustls = { version = "0.26", default-features = false }
tonic-build = { version = "0.13", default-features = false }
tor-rtcompat = "0.28"
trait-variant = "0.1"
uuid = "1.1"
webpki-roots = "0.26"
zcash_spec = "0.2"
zeroize = { version = "1.7", default-features = false }
zip32 = { version = "0.2", default-features = false }


# zebra-specific
# ---------------------
sapling-crypto = "0.5"
abscissa_core = "0.7"
atty = "0.2.14"
bincode = "1.3"
bitflags-serde-legacy = "0.1.1"
bytes = "1.10"
chrono = { version = "0.4.40", default-features = false }
clap = "4.5"
color-eyre = { version = "0.6.3", default-features = false }
console-subscriber = "0.4"
derive-getters = "0.5"
derive-new = "0.5"
dirs = "6.0"
ed25519-zebra = "4.0.3"
elasticsearch = { version = "8.17.0-alpha.1", default-features = false }
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
hex-literal = "0.4"
howudoin = "0.1"
human_bytes = { version = "0.4", default-features = false }
humantime = "2.2"
humantime-serde = "1.1"
indexmap = "2.8"
indicatif = "0.17"
inferno = { version = "0.12", default-features = false }
insta = "1.42"
itertools = "0.14"
jsonrpc = "0.18"
jsonrpsee = "0.24.8"
jsonrpsee-proc-macros = "0.24.9"
jsonrpsee-types = "0.24.9"
log = "0.4.27"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
mset = "0.1"
nix = "0.29"
num-integer = "0.1.46"
once_cell = "1.21"
ordered-map = "0.4.2"
owo-colors = "4.2.0"
pin-project = "1.1.10"
primitive-types = "0.12"
proptest-derive = "0.5"
quote = "1.0.40"
reddsa = "0.5"
reqwest = { version = "0.12.15", default-features = false }
rlimit = "0.10.2"
rocksdb = { version = "0.23.0", default-features = false, features = ["bindgen-runtime"] }
semver = "1.0.26"
sentry = { version = "0.40", default-features = false }
serde-big-array = "0.5"
serde_with = "3.12"
serde_yml = "0.0"
spandoc = "0.2"
structopt = "0.3"
syn = "2.0.100"
tempfile = "3.20"
thiserror = "2.0"
thread-priority = "1.2"
tinyvec = "1.9"
tokio-stream = "0.1.17"
tokio-test = "0.4"
tokio-util = "0.7.14"
toml = "0.9.5"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-reflection = "0.14"
tower-test = "0.4"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-flame = "0.2"
tracing-futures = "0.2.5"
tracing-journald = "0.3"
tracing-subscriber = "0.3.19"
tracing-test = "0.2.4"
uint = "0.10"
vergen-git2 = { version = "1.0", default-features = false }
x25519-dalek = "2.0.1"
zcash_script = "0.3.2"
config = { version = "0.15.14", features = ["toml"] }

# zingo-common specific
# ---------------------
http = "1.1.0"
http-body = "1"
hyper-rustls = { version = "0.27", features = ["http2"] }
tonic = { version = "0.13", features = ["tls-webpki-roots"] }
rustls-pemfile = "2"


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(zcash_unstable, values("zfuture", "nu7"))',
  'cfg(live_network_tests)',
] }
